<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddBillActivity">

    <TextView
        android:id="@+id/billTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:padding="5dp"
        android:text="@string/bill_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/inputBillTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/billTitle"
        android:layout_marginTop="1dp"
        android:autofillHints=""
        android:hint="@string/input_get_bill"
        android:inputType="text"
        android:text="@string/input_get_bill"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#68000000"
        android:textSize="12sp"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/billDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/inputBillTitle"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="15dp"
        android:padding="5dp"
        android:text="@string/bill_desc"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

    <EditText
        android:id="@+id/inputBillDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/billDesc"
        android:layout_marginTop="2dp"
        android:ems="10"
        android:hint="@string/input_bill_desc"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:text="@string/input_bill_desc"
        android:textColor="#68000000"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/photocopyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/inputBillDesc"
        android:layout_alignParentStart="true"
        android:layout_marginStart="-1dp"
        android:layout_marginTop="30dp"
        android:padding="5dp"
        android:text="@string/Photocopy_of_the_bill"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <ImageButton
        android:id="@+id/cameraButton"
        android:layout_width="139dp"
        android:layout_height="102dp"
        android:layout_below="@+id/photocopyText"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="14dp"
        android:contentDescription="@string/camera_button_desc"
        android:src="@android:drawable/ic_menu_camera" />

    <TextView
        android:id="@+id/cameraImagePath"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cameraButton"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="8dp"
        android:padding="5dp"
        tools:text="TextView" />

    <Button
        android:id="@+id/addBillButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cameraImagePath"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="46dp"
        android:background="#4578A0"
        android:text="@string/add_bill"
        android:textAllCaps="false"
        android:textColor="#DFDFDF" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cameraImagePath"
        android:layout_alignParentStart="true"
        android:layout_marginStart="46dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="144dp"
        android:layout_toStartOf="@+id/addBillButton"
        android:background="#4578A0"
        android:text="@string/cancel_bill"
        android:textAllCaps="false"
        android:textColor="#DFDFDF" />


</RelativeLayout>